--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html xmlns:th="http://www.thymeleaf.org" class="no-js" lang="en">
 <head>
   <meta charset="utf-8">
   <title>Catholoic Stream</title>
@@ -15,16 +14,16 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
-  <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link th:href="@{~/lib/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
 
   <!-- Libraries CSS Files -->
-  <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-  <link href="lib/animate/animate.min.css" rel="stylesheet">
-  <link href="lib/venobox/venobox.css" rel="stylesheet">
-  <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link th:href="@{~/lib/font-awesome/css/font-awesome.min.css}" rel="stylesheet">
+  <link th:href="@{~/lib/animate/animate.min.css}" rel="stylesheet">
+  <link th:href="@{~/lib/venobox/venobox.css}" rel="stylesheet">
+  <link th:href="@{~/lib/owlcarousel/assets/owl.carousel.min.css}" rel="stylesheet">
 
   <!-- Main Stylesheet File -->
-  <link href="css/style.css" rel="stylesheet">
+  <link th:href="@{~/css/style.css}" rel="stylesheet">
 
 </head>
 
@@ -78,27 +77,42 @@
     <section id="schedule" class="section-with-bg">
       <div class="container wow fadeInUp">
         <div class="section-header">
-          <h2>Masses today</h2>
-          <p>Masses and adoration feeds</p>
+          <h2>[[${language}]] Mass today</h2>
+          <p class="font-weight-bold">All the schedules are in [[${timezone}]]  timezone</p>
+
+          <ul class="nav nav-tabs" role="tablist">
+            <li class="nav-item lej-padding">
+              <a class="nav-link active" th:href="@{/}">Malayalam</a>
+            </li>
+            <li class="nav-item lej-padding">
+              <a class="nav-link active" th:href="@{/masses/english}" >English</a>
+            </li>
+            <li class="nav-item lej-padding">
+              <a class="nav-link active" th:href="@{/masses/hindi}" >Hindi</a>
+            </li>
+
+          </ul>
+
+
         </div>
 
         <ul class="nav nav-tabs" role="tablist">
-          <li class="nav-item">
+          <li class="nav-item lej-padding">
             <a class="nav-link active" href="#sun" role="tab" data-toggle="tab">Sunday</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item lej-padding">
             <a class="nav-link" href="#mon" role="tab" data-toggle="tab">Monday</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item lej-padding">
             <a class="nav-link" href="#tue" role="tab" data-toggle="tab">Tuesday</a>
 		  </li>
-		  <li class="nav-item">
+		  <li class="nav-item lej-padding">
             <a class="nav-link" href="#wed" role="tab" data-toggle="tab">Wednesday</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item lej-padding">
             <a class="nav-link" href="#thu" role="tab" data-toggle="tab">Thursday</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item lej-padding">
             <a class="nav-link" href="#fri" role="tab" data-toggle="tab">Friday</a>
 		  </li>
 		  
@@ -107,15 +121,17 @@
         <div class="tab-content row justify-content-center">
 
           <!-- Sunday -->
-          <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="sun">
+          <div role="tabpanel" class="col-lg-9  tab-pane fade" id="sun">
 
-            <div class="row schedule-item">
-              <div class="col-md-2"><time>09:30 AM</time></div>
+            <div class="row schedule-item" th:each="mass : ${sunday}">
+              <div class="col-md-2"><time>[[${mass.prettyTime}]]</time></div>
               <div class="col-md-10">
-                <h4>Registration</h4>
-                <p>Fugit voluptas iusto maiores temporibus autem numquam magnam.</p>
+                <h4 th:text="${mass.name}"></h4>
+                <p th:text="${mass.description}">.</p><br/>
+                <a th:href="${mass.link}"><button class="btn btn-small btn-warning" >Watch</button> </a>
               </div>
             </div>
+
 
           </div>
           <!-- End Sunday -->
@@ -123,20 +139,15 @@
           <!-- Monday -->
           <div role="tabpanel" class="col-lg-9  tab-pane fade" id="mon">
 
-            <div class="row schedule-item">
-              <div class="col-md-2"><time>10:00 AM</time></div>
+            <div class="row schedule-item" th:each="mass : ${monday}">
+              <div class="col-md-2"><time>[[${mass.prettyTime}]]</time></div>
               <div class="col-md-10">
-                <h4>Libero corrupti explicabo itaque. <span>Brenden Legros</span></h4>
-                <p>Facere provident incidunt quos voluptas.</p>
+                <h4 th:text="${mass.name}"></h4>
+                <p th:text="${mass.description}">.</p><br/>
+                <a th:href="${mass.link}"><button class="btn btn-small btn-warning" >Watch</button> </a>
               </div>
             </div>
-            <div class="row schedule-item">
-              <div class="col-md-2"><time>10:00 AM</time></div>
-              <div class="col-md-10">
-                <h4>Libero corrupti explicabo itaque. <span>Brenden Legros</span></h4>
-                <p>Facere provident incidunt quos voluptas.</p>
-              </div>
-            </div>
+
 
           </div>
           <!-- End Monday -->
@@ -144,19 +155,77 @@
           <!-- Schdule Day 3 -->
           <div role="tabpanel" class="col-lg-9  tab-pane fade" id="tue">
 
-            <div class="row schedule-item">
-              <div class="col-md-2"><time>10:00 AM</time></div>
+            <div class="row schedule-item" th:each="mass : ${tuesday}">
+              <div class="col-md-2"><time>[[${mass.prettyTime}]]</time></div>
               <div class="col-md-10">
-                <div class="speaker">
-                  <img src="img/speakers/2.jpg" alt="Hubert Hirthe">
-                </div>
-                <h4>Et voluptatem iusto dicta nobis. <span>Hubert Hirthe</span></h4>
-                <p>Maiores dignissimos neque qui cum accusantium ut sit sint inventore.</p>
+                <h4 th:text="${mass.name}"></h4>
+                <p th:text="${mass.description}">.</p><br/>
+                <a th:href="${mass.link}"><button class="btn btn-small btn-warning" >Watch</button> </a>
+              </div>
+            </div>
+
+
+          </div>
+          <!-- End Schdule Day 3 -->
+
+          <!-- Schdule Day 4 -->
+          <div role="tabpanel" class="col-lg-9  tab-pane fade" id="wed">
+
+            <div class="row schedule-item" th:each="mass : ${wednesday}">
+              <div class="col-md-2"><time>[[${mass.prettyTime}]]</time></div>
+              <div class="col-md-10">
+                <h4 th:text="${mass.name}"></h4>
+                <p th:text="${mass.description}">.</p><br/>
+                <a th:href="${mass.link}"><button class="btn btn-small btn-warning" >Watch</button> </a>
               </div>
             </div>
 
           </div>
-          <!-- End Schdule Day 3 -->
+          <!-- End Schdule Day 4 -->
+          <!-- Schdule Day 5 -->
+          <div role="tabpanel" class="col-lg-9  tab-pane fade" id="thu">
+
+            <div class="row schedule-item" th:each="mass : ${thursday}">
+              <div class="col-md-2"><time>[[${mass.prettyTime}]]</time></div>
+              <div class="col-md-10">
+                <h4 th:text="${mass.name}"></h4>
+                <p th:text="${mass.description}">.</p><br/>
+                <a th:href="${mass.link}"><button class="btn btn-small btn-warning" >Watch</button> </a>
+              </div>
+            </div>
+
+          </div>
+          <!-- End Schdule Day 5 -->
+
+          <!-- Schdule Day 6 -->
+          <div role="tabpanel" class="col-lg-9  tab-pane fade" id="fri">
+
+            <div class="row schedule-item" th:each="mass : ${friday}">
+              <div class="col-md-2"><time>[[${mass.prettyTime}]]</time></div>
+              <div class="col-md-10">
+                <h4 th:text="${mass.name}"></h4>
+                <p th:text="${mass.description}">.</p><br/>
+                <a th:href="${mass.link}"><button class="btn btn-small btn-warning" >Watch</button> </a>
+              </div>
+            </div>
+
+          </div>
+          <!-- End Schdule Day 6 -->
+
+          <!-- Schdule Day 7 -->
+          <div role="tabpanel" class="col-lg-9  tab-pane fade" id="sat">
+
+            <div class="row schedule-item" th:each="mass : ${saturday}">
+              <div class="col-md-2"><time>[[${mass.prettyTime}]]</time></div>
+              <div class="col-md-10">
+                <h4 th:text="${mass.name}"></h4>
+                <p th:text="${mass.description}">.</p><br/>
+                <a th:href="${mass.link}"><button class="btn btn-small btn-warning" >Watch</button> </a>
+              </div>
+            </div>
+
+          </div>
+          <!-- End Schdule Day 7 -->
 
         </div>
 
@@ -182,21 +251,27 @@
   <a href="#" class="back-to-top"><i class="fa fa-angle-up"></i></a>
 
   <!-- JavaScript Libraries -->
-  <script src="lib/jquery/jquery.min.js"></script>
-  <script src="lib/jquery/jquery-migrate.min.js"></script>
-  <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="lib/easing/easing.min.js"></script>
-  <script src="lib/superfish/hoverIntent.js"></script>
-  <script src="lib/superfish/superfish.min.js"></script>
-  <script src="lib/wow/wow.min.js"></script>
-  <script src="lib/venobox/venobox.min.js"></script>
-  <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+  <script th:src="@{/lib/jquery/jquery.min.js}"></script>
+  <script th:src="@{/lib/jquery/jquery-migrate.min.js}"></script>
+  <script th:src="@{/lib/bootstrap/js/bootstrap.bundle.min.js}"></script>
+  <script th:src="@{/lib/easing/easing.min.js}"></script>
+  <script th:src="@{/lib/superfish/hoverIntent.js}"></script>
+  <script th:src="@{/lib/superfish/superfish.min.js}"></script>
+  <script th:src="@{/lib/wow/wow.min.js}"></script>
+  <script th:src="@{/lib/venobox/venobox.min.js}"></script>
+  <script th:src="@{/lib/owlcarousel/owl.carousel.min.js}"></script>
 
   <!-- Contact Form JavaScript File -->
-  <script src="contactform/contactform.js"></script>
+  <script th:src="@{/contactform/contactform.js}"></script>
 
   <!-- Template Main Javascript File -->
-  <script src="js/main.js"></script>
+  <script th:src="@{/js/main.js}"></script>
+<script>
+  function redirectTo(url){
+   window.location(url);
+  }
+
+</script>
 </body>
 
 </html>
