--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -82,7 +82,7 @@
 
           <ul class="nav nav-tabs" role="tablist">
             <li class="nav-item lej-padding">
-              <a class="nav-link active" th:href="@{/}">Malayalam</a>
+              <a class="nav-link active" th:href="@{/masses/malayalam}">Malayalam</a>
             </li>
             <li class="nav-item lej-padding">
               <a class="nav-link active" th:href="@{/masses/english}" >English</a>
