links modified , cache added

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -49,8 +49,9 @@
           <li><a href="#venue">Venue</a></li>
           <li><a href="#hotels">Hotels</a></li>
           <li><a href="#sponsors">Sponsors</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <li class="buy-tickets"><a href="#buy-tickets">Buy Tickets</a></li> -->
+            <li class="buy-tickets"><a href="#buy-tickets">Buy Tickets</a></li> -->
+          <li><a href="http://jyinfopark.in/">Contact</a></li>
+
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
@@ -399,8 +400,11 @@
 
 		gtag('config', 'UA-161546265-1');
 
-		function openModal(){
+		$(window).on('load',function(){
         $('#exampleModal').modal('show');
+    });
+    function openModal(){
+      $('#exampleModal').modal('show');
     }
 	</script>
 </body>
