--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -172,7 +172,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #header #logo h1 a,
 #header #logo h1 a:hover {
-  color: #fff;
+  color: #d29e02;
 }
 
 #header #logo img {
@@ -257,7 +257,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 8px;
   text-decoration: none;
   display: inline-block;
-  color: rgba(202, 206, 221, 0.8);
+  color: #d29e02;
   font-family: "Raleway", sans-serif;
   font-weight: 600;
   font-size: 14px;
@@ -266,7 +266,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .nav-menu .menu-active a,
 .nav-menu a:hover {
-  color: #fff;
+  color: #9194a2;
 }
 
 .nav-menu > li {
@@ -461,7 +461,6 @@ body.mobile-nav-active #mobile-nav-toggle {
 #intro {
   width: 100%;
   height: 100vh;
-  background: url(../img/intro-bg.jpg) top center;
   background-size: cover;
   overflow: hidden;
   position: relative;
@@ -469,7 +468,6 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #intro:before {
   content: "";
-  background: rgba(6, 12, 34, 0.8);
   position: absolute;
   bottom: 0;
   top: 0;
